Sync SDK sources at sdk-v0.1.8
